[package]
name = "doggie_and_kitie_doll"
version = "0.1.0"
authors = ["Stepan Henek <stepan@henek.name>"]
edition = "2021"
description = "Interactive storytelling - doggie and kitie cake story"
license = "CC0"
readme = "README.md"
keywords = ["games", "stories", "books"]
repository = "https://github.com/shenek/pabitell"
categories = ["games", "web-programming"]

[features]
default = [ 'with_webapp' ]
with_webapp = [
	'console_error_panic_hook',
	'pabitell-lib/with_webapp',
	'uuid/v4',
	'uuid/js',
	'wasm-logger',
	'wee_alloc',
	'yew',
]	

[dependencies]
anyhow = "1"
fluent = { version = "0.16" }
console_error_panic_hook = { version = "0.1", optional = true }
include_dir = { version = "0.7", features = ["glob"] }
intl-memoizer = { version = "0.5" }
lazy_static = { version = "1" }
pabitell-lib = { version = "0.2.0", features = ["with_webapp"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.1", features = [ 'v4', 'js' ] } # remove features once https://github.com/thedodd/trunk/pull/183 is merged 
wee_alloc = { version = "~0.4.5", optional = true }
wasm-logger = { version = "0.2", optional = true }
yew = { version = "0.19", optional = true }


[dev-dependencies]


[[bin]]
name = "doggie_and_kitie-doll"
path = "src/main.rs"
required-features = ["with_webapp"]

[profile.release]
# less code to include into binary
panic = 'abort' 
# optimization over all codebase ( better optimization, slower build )
codegen-units = 1
# optimization for size ( more aggressive )
opt-level = 'z' 
# optimization for size 
#opt-level = 's' 
# link time optimization using using whole-program analysis
lto = true
